2024.1/serialization/serialization.adoc
include::../../shared/issue-footnotes.adoc[]

:m3: ../metametamodel/metametamodel
:refarch: ../reference-architecture/reference-architecture
:roadmap: ../roadmap/roadmap
:fn-mof: footnote:mof[https://en.wikipedia.org/wiki/Meta-Object_Facility[Meta-Object Facility], also known as M3 model]

= LionWeb Serialization Format
:toc: preamble
:toclevels: 3

This document describes the serialization format for LionWeb *version 2024.1* chunks.

== Conventions used in this document
* _italic_ words refer to concepts defined by JSON.
* *bold* words refer to concepts defined in this document.
* `monospaced` words describe verbatim contents of the serialization.
* ALL-CAPS key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in https://datatracker.ietf.org/doc/html/bcp14[BCP14] (https://datatracker.ietf.org/doc/html/rfc2119[RFC2119], https://datatracker.ietf.org/doc/html/rfc8174[RFC8174]) when, and only when, they appear in all capitals, as shown here.
* "processed document" refers to the character sequence that's parsed or written, e.g. a file or network stream.
* Footnotes refer to more discussions and rationale, but are non-normative.

== Design goals
We want to provide boring and proven infrastructure, so that innovation can be built on top of it.
We do not take any measures to reduce the amount of transmitted data.{fn-org73}
We strive for shallow structures to enable stream-based processing.

== Description
LionWeb node serialization format is defined in JSON (https://datatracker.ietf.org/doc/html/rfc8259[RFC 8259]).

We follow the advice of RFC 8259 to be "interoperable", i.e. we assume object keys are unique, and their order is undefined.
Any violations SHOULD be reported as error.{fn-org159}

== Overview of structures

No unspecified _members_ are allowed anywhere in the structure.{fn-org67}

plantuml::serialization.puml[format=svg]

=== Root structure

[[SerializationChunk]]
Root level MUST be an _object_ with three _members_, called *serialization chunk*.

[[SerializationChunk.serializationFormatVersion, `serializationFormatVersion`]]
The first _member_ SHOULD be _key_ `serializationFormatVersion` with a _string_ _value_.{fn-org58}{fn-org159}{fn-org172}
The value MUST be a non-empty string (without leading or trailing whitespace){fn-org165} describing the serialization format version used to create the processed document, according to <<versions>>.

[[SerializationChunk.languages]]
The second _member_ SHOULD be _key_ `languages` with an _array_ _value_.{fn-org76}{fn-org78}{fn-org159}
Each _element_ in the value array MUST adhere to <<language>>.
The order of _elements_ is undefined.
_elements_ MUST contain all language/version referred to by any <<meta-pointer>> in the processed document.
Each _element_ MUST be unique with respect to all its _members_.

[[SerializationChunk.nodes]]
The third _member_ SHOULD be _key_ `nodes` with an _array_ _value_.{fn-org33}{fn-org159}
Each _element_ in the value array MUST adhere to <<node>>.
The order of _elements_ is undefined.
Each _element_ MUST be unique with respect to the value of its _key_ `id`.

[[language]]
=== Language structure
[[UsedLanguage]]
Each *used language* MUST be an _object_.{fn-org129}
The order of _members_ is undefined.

NOTE: If the chunk describes a language (M2), it might include instances of builtins' language entities.
In this case, builtins MUST be listed as *used language* like any other language.{fn-org153}

The _object_ MUST contain the following _members_:{fn-org76}

* [[UsedLanguage.key]] _key_ `key` with _string_ _value_, adhering to <<language-key>>.
* [[UsedLanguage.version]] _key_ `version` with _string_ _value_, adhering to <<language-version>>.

[[language-key]]
==== Language key
A _string_ according to <<{m3}.adoc#keys, Key spec>>.
Refers to the <<{m3}.adoc#IKeyed.key, key>> of the language.

[[language-version]]
==== Language version
A _string_ with any contents{fn-org128}{fn-org130}, MUST NOT be empty.{fn-org92}
Refers to the <<{m3}.adoc#Language.version, version>> of the language.

[[meta-pointer]]
=== Meta-pointer
[[MetaPointer]]
A *meta-pointer* is a reference from M1 to M2.{fn-org89}{fn-mof}
It's used at several places within <<node>>.

Each meta-pointer MUST be an _object_.
The order of _members_ is undefined.

The _object_ MUST contain the following _members_:

* [[MetaPointer.lanuage]] _key_ `language` with _string_ _value_, adhering to <<language-key>>.
* [[MetaPointer.version]] _key_ `version` with _string_ _value_, adhering to <<language-version>>.
* [[MetaPointer.key]] _key_ `key` with _string_ _value_ according to <<{m3}.adoc#keys, Keys spec>>.
Refers to some <<{m3}.adoc#IKeyed, element in the language>>.
Which element exactly is specified for each usage of meta-pointer.

[[node]]
=== Node structure
[[Node]]
Each *node* MUST be an _object_.{fn-org37}
The order of _members_ is undefined.

The _object_ MUST contain the following _members_:{fn-org59}{fn-java33}{fn-org55}

* [[Node.id]] _key_ `id` with _string_ _value_, adhering to <<id>>.
* [[Node.classifier]] _key_ `classifier`{fn-org37-name}{fn-org184} with _object_ _value_, adhering to <<meta-pointer>>.
  The *meta-pointer*'s ``key``'s _value_ refers to the <<{m3}.adoc#IKeyed.key, *key*>> of the <<{m3}.adoc#Concept, *Concept*>> or <<{m3}.adoc#Annotation, *Annotation*>> this *node* is an instance of.
* [[Node.properties]] _key_ `properties` with _array_ _value_, each _element_ adhering to <<property>>.
The order of _elements_ is undefined.{fn-org156}
* [[Node.containments]] _key_ `containments`{fn-org55-name-children}{fn-org206} with _array_ _value_, each _element_ adhering to <<containment>>.
The order of _elements_ is undefined.{fn-org156}
* [[Node.references]] _key_ `references`{fn-org55-name-references} with _array_ _value_, each _element_ adhering to <<reference>>.
The order of _elements_ is undefined.{fn-org156}
* [[Node.annotations]] _key_ `annotations`{fn-org150} with _array_ _value_, each _element_ adhering to <<annotation>>.
The order of _elements_ MUST be maintained.{fn-org157}
* [[Node.parent]] _key_ `parent`{fn-org187} with _string_ or _null_ _value_, adhering to <<parent>>.

For all features (i.e. `properties`, `containments`, and `references`) defined for a **node**'s classifier:{fn-org33}

* During serialization, we SHOULD include every feature, even if unset.
In the latter case:
** the *property* MUST have `value` = _null_;
** the *containment* MUST have `children` = _empty array_;
** the *reference* MUST have `targets` = _empty array_;
* During deserialization, we MUST accept a *node* even if not all defined features are present.
* We MAY accept undefined features during deserialization if we can deal with them in a meaningful manner.

NOTE: We currently cannot store "invalid text" (i.e. user-entered text that does not adhere to the underlying structure and/or constraints) in the model.
We will support this in a future release.{fn-org62}


[[id]]
==== Id value
A _string_ according to <<{m3}.adoc#identifiers, Identifier spec>>.
Defines the *id* of this *node*.


[[property]]
==== Property
[[Property]]
Each *property* MUST be an _object_.
The order of _members_ is undefined.

The _object_ MUST contain the following _members_:

* [[Property.property]] _key_ `property` with _object_ _value_, adhering to <<meta-pointer>>.
  The *meta-pointer*'s ``key``'s _value_ refers to the <<{m3}.adoc#IKeyed.key, *key*>> of the <<{m3}.adoc#Property, *Property*>> this *property* is an instance of.
* [[Property.value]] _key_ `value` with _value_ as one of
** _string_{fn-org34} containing the value of the property referenced by the `property`.
Refer to <<property-values>> for the specification of the value format.
Can be an empty _string_.
** _null_ to explicitly specify the property to be unset.


[[containment]]
==== Containment
[[Containment]]
Each *containment* MUST be an _object_.
The order of _members_ is undefined.

The _object_ MUST contain the following _members_:

* [[Containment.containment]] _key_ `containment` with _object_ _value_, adhering to <<meta-pointer>>.
The *meta-pointer*'s ``key``'s _value_ refers to the <<{m3}.adoc#IKeyed.key, *key*>> of the <<{m3}.adoc#Containment, *Containment*>> this *containment* is an instance of.
* [[Containment.children]] _key_ `children` with _array_ _value_ with _string_ _elements_.
Each _element_ adheres to <<{m3}.adoc#identifiers, Identifier spec>>, and refers to the *id* of the contained *node*.
The order of _elements_ MUST be maintained.{fn-org157}
+
NOTE: Each `children` element is the inverse relation of a *parent*.
+
NOTE: The `children` *node* can be contained in the processed document, but also can be outside the processed document (i.e. not contained in the processed document).

[[reference]]
==== Reference
[[Reference]]
Each *reference* MUST be an _object_.
The order of _members_ is undefined.

The _object_ MUST contain the following _members_:

* [[Reference.reference]] _key_ `reference` with _object_ _value_, adhering to <<meta-pointer>>.
The *meta-pointer*'s ``key``'s _value_ refers to the <<{m3}.adoc#IKeyed.key, *key*>> of the <<{m3}.adoc#Reference, *Reference*>> this *reference* is an instance of.
* [[Reference.targets]] _key_ `targets` with _array_ _value_ with __object_ _elements_.
The order of _elements_ MUST be maintained.{fn-org157}
Each _element_ MUST have the following _members_ in undefined order:{fn-org55-name-references}
** [[Reference.reference.resolveInfo]] _key_ `resolveInfo`{fn-org36} with _value_ as one of:
*** _string_ containing *resolveInfo*, a textual hint that might be used to find the target *node* of this reference.
Interface <<{m3}.adoc#INamed, INamed>> SHOULD be used as a default, if available.
The exact value depends on the implementation.
Can be an empty _string_.
*** _null_ if no *resolveInfo* is available.

** [[Reference.reference.reference]] _key_ `reference`{fn-org35} with _value_ as one of:
*** _string_ according to <<{m3}.adoc#identifiers, Identifier spec>>.
Refers to the *id* of the target *node*.
+
NOTE: The referred *node* can be contained in the processed document, but also can be outside the processed document (i.e. not contained in the processed document).
*** _null_ if the *id* of the target *node* is not known.

[[annotation]]
==== Annotation
[[Annotation]]
Each *annotation* MUST be a _string_.
It adheres to <<{m3}.adoc#identifiers, Identifier spec>>, and refers to the *id* of the contained annotation *node*.

NOTE: Each *annotation* element is the inverse relation of a *parent*.{fn-org150}

NOTE: The annotation *node* can be contained in the processed document, but also can be outside the processed document (i.e. not contained in the processed document).

[[parent]]
==== Parent
One of

* _string_ according to <<{m3.acoc}#identifiers, Identifier spec>>.
Refers to the *id* of the *node* containing this *node*.
+
NOTE: *parent* is the inverse relation of either one *containment* or one *annotation*.{fn-org186}
+
NOTE: The referred *node* can be contained in the processed document, but also can be outside the processed document (i.e. not contained in the processed document).

* _null_ if
** This *node* is a *root node*, i.e. this node does not have a parent.
** This serialization is sent as an update request.

[[property-values]]
=== Property serialization
All property values MUST be serialized as JSON _string_.{fn-org34}{fn-org9}.
An unset property SHOULD be serialized as JSON _null_.

[[string]]
==== String
<<{m3}.adoc#String, LionCore Strings>> might be any string, of any length, including (but not limited to):

* empty string: `""`
* only containing whitespace: `" "`
* containing escaped characters as per JSON spec: `"They said:\n \"Hello!\""`
* containing extended Unicode characters: `"😐"`
* containing escaped Unicode characters: `"\uD83D\uDE10"`

[[boolean]]
==== Boolean
<<{m3}.adoc#Boolean, LionCore Booleans>> MUST be encoded as exactly one of these JSON _strings_:

* `"true"`
* `"false"`

Booleans MUST NOT be encoded with leading or trailing whitespace, uppercase characters, short forms (like `t` or `f`), or decimal representation (like `1`, `0`, `-1`).

[[integer]]
==== Integer
<<{m3}.adoc#Integer, LionCore Integers>> MUST be encoded as JSON _string_.

* Integers MUST be represented in base-10.
* The digits can be prefixed with either `+` (plus) or `-` (minus).{fn-org100}
* Integers MUST NOT be prefixed by leading zeros.
* Integers can contain value zero with any prefix, i.e. `0`, `-0`, or `+0`.
* Integers MUST NOT contain leading or trailing whitespace.
* LionWeb does NOT limit the range of the integer value.{fn-org149}
  An implementation MAY refuse a model containing an integer value outside the supported range.

.Examples of valid Integer encodings

* `"0"`
* `"+0"`
* `"-0"`
* `"123"`
* `"-100000"`
* `"+999"`
* `"100000000200000000300000000400000000500000000600000000700000000800000000900000000999999999"`
* `"-999999999900000000800000000700000000600000000500000000400000000300000000200000000100000000"`

.Examples of invalid Integer encodings

* `""`
* `123`
* `-1`
* `"+-0"`
* `"++1"`
* `"00002"`
* `"0xAA12"`
* `" 5"`
* `"-6 "`

[[structuredDatatype]]
==== Structured Datatype
<<{m3}.adoc#StructuredDataType, LionCore StructuredDataType>> MUST be encoded as JSON _string_.
The string contains a JSON _object_ according to spec (RFC 8259) with proper escaping: all double quotes, line breaks, etc. MUST be escaped to form a proper JSON _string_.

The contents of the string are formed as follows:
A <<{m3}.adoc#StructuredDataType, LionCore StructuredDataType>> is encoded as JSON _object_.
Each <<{m3}.adoc#Field, Field>> forms one _member_, with the field's <<{m3}.adoc#IKeyed.key, key>> as JSON _key_ and the field's value as JSON _value_.
For fields of type <<string>>, <<boolean>>, <<integer>>, and <<literal>>, the _value_ is encoded as JSON _string_ in the same way as for a property.
For fields of type <<structuredDatatype>>, the value is encoded as JSON _object_ if the field is set, otherwise as JSON _null_.

.Structured datatypes used in the examples
--

NOTE: The format used in this example is non-normative.

[source]
----
enumeration Currency                   [id aa, key currency]
  literal EUR                          [id a0, key cur-eur]
  literal GBP                          [id a1, key cur-gbp]

structured datatype Amount             [id 10, key amount]
  value: Integer                       [id 11, key amount-val]
  currency: Currency                   [id 12, key amount-cur]
  digital: Boolean                     [id 13, key digital]

structured datatype Decimal            [id 20, key decimal]
  int: Integer                         [id 21, key decimal-int]
  frac: Integer                        [id 22, key decimal-frac]

structured datatype ComplexNumber      [id 30, key complex]
  real: Decimal                        [id 31, key complex-real]
  imaginary: Decimal                   [id 32, key complex-imaginary]

structured datatype FullyQualifiedName [id 50, key fqn]
  name: String                         [id 40, key nm]
  nested: FullyQualifiedName           [id 55, key nested]
----
--

.Valid examples
* Amount _42 EUR non-digital_: `"{\n  \"amount-val\":  \"42\",\n  \"amount-cur\": \"cur-eur\",\n  \"digital\": \"false\"\n}"`
+
unescaped content:
+
[source, json]
----
{
  "amount-val":  "42",
  "amount-cur": "cur-eur",
  "digital": "false"
}
----

* Decimal _42.0_: `"{\"decimal-int\": \"42\", \"decimal-frac\": \"0\"}"`
+
unescaped content:
+
[source, json]
----
{"decimal-int": "42", "decimal-frac": "0"}
----

* ComplexNumber _23.17 + 42.0i_: `"{\n\"complex-real\": { \"decimal-int\": \"23\", \"decimal-frac\": \"17\"},\n\"complex-imaginary\": { \"decimal-int\": \"42\", \"decimal-frac\": \"0\"}\n}"`
+
unescaped content:
+
[source, json]
----
{
"complex-real": { "decimal-int": "23", "decimal-frac": "17"},
"complex-imaginary": { "decimal-int": "42", "decimal-frac": "0"}
}
----

* FullyQualifiedName _com.example.subdomain_: `"{\n  \"nm\": \"com\",\n  \"nested\": {\n    \"nm\": \"example\",\n    \"nested\": {\n      \"nm\": \"subdomain\",\n      \"nested\": null\n    }\n  }\n}"`
+
unescaped content:
+
[source, json]
----
{
  "nm": "com",
  "nested": {
    "nm": "example",
    "nested": {
      "nm": "subdomain",
      "nested": null
    }
  }
}
----

.Invalid examples
* Amount with non-string field values: `"{\n  \"amount-val\":  42,\n  \"amount-cur\": \"cur-eur\",\n  \"digital\": false\n}"`
+
unescaped content:
+
[source, json]
----
{
  "amount-val":  42,
  "amount-cur": "cur-eur",
  "digital": false
}
----

* Decimal with missing field: `"{\"decimal-int\": \"42\"}"`
+
unescaped content:
+
[source, json]
----
{"decimal-int": "42"}
----

* Decimal with `null` value for field with primitive type: `"{\"decimal-int\": \"42\", \"decimal-frac\": null}"`
+
unescaped content:
+
[source, json]
----
{"decimal-int": "42", "decimal-frac": null}
----

* Decimal with missing outer braces: `"\"decimal-int\": \"42\", \"decimal-frac\": \"0\""`
+
unescaped content:
+
[source, json]
----
"decimal-int": "42", "decimal-frac": "0"
----

* Decimal with field name as JSON _keys_: `"{\"int\": \"42\", \"frac\": \"0\"}"`
+
unescaped content:
+
[source, json]
----
{"int": "42", "frac": "0"}
----

* Decimal with invalid field value: `"{\"decimal-int\": \"42\", \"decimal-frac\": \"nothing\"}"`
+
unescaped content:
+
[source, json]
----
{"decimal-int": "42", "decimal-frac": "nothing"}
----

* Decimal with unknown field: `"{\"decimal-int\": \"42\", \"decimal-frac\": \"0\", \"decimal-comment\": \"life question?\"}"`
+
unescaped content:
+
[source, json]
----
{"decimal-int": "42", "decimal-frac": "0", "decimal-comment": "life question?"}
----

* ComplexNumber with recursively nested structured datatype: `"{\n\"complex-real\": \"{ \\\"decimal-int\\\": \\\"23\\\", \\\"decimal-frac\\\": \\\"17\\\"}\",\n\"complex-imaginary\": { \"decimal-int\": \"42\", \"decimal-frac\": \"0\"}\n}"`
+
unescaped content:
+
[source, json]
----
{
"complex-real": "{ \"decimal-int\": \"23\", \"decimal-frac\": \"17\"}",
"complex-imaginary": { "decimal-int": "42", "decimal-frac": "0"}
}
----

* FullyQualifiedName with _null_ as string value for unset nested structured datatype: `"{\n  \"nm\": \"com\",\n  \"nested\": {\n    \"nm\": \"example\",\n    \"nested\": {\n      \"nm\": \"subdomain\",\n      \"nested\": \"null\"\n    }\n  }\n}"`
+
unescaped content:
+
[source, json]
----
{
  "nm": "com",
  "nested": {
    "nm": "example",
    "nested": {
      "nm": "subdomain",
      "nested": "null"
    }
  }
}
----

[[literal]]
==== Enumeration literal
<<{m3}.adoc#EnumerationLiteral, LionCore Enumeration literals>> MUST be encoded as JSON _string_ _value_ according to <<{m3}.adoc#keys, Key spec>>.
MUST refer to the <<{m3}.adoc#IKeyed.key, key>> of an <<{m3}.adoc#EnumerationLiteral, EnumerationLiteral>> of the <<{m3}.adoc#Enumeration, Enumeration>> defined as <<{m3}.adoc#Property.type, type>> of this *Property*.{fn-org128}

== Examples

=== Minimal
[source,json]
----
include::minimal.json[]
----

=== Minimal node
[source,json]
----
include::minimal-node.json[]
----

=== Property variants

For this example, we need to define an enumeration and a concept that uses the enumeration.

NOTE: The format used in this example is non-normative.

Assume this enumeration:
[source]
----
enumeration DaysOfWeek [id 23, key days-of-week]

  literal Monday       [id 34, key monday]
  literal Tuesday      [id 2,  key tttt]
  literal Wednesday    [id 55, key 12398712]
----

And this concept:
[source]
----
concept OpeningTime           [id 44, key time_to_open]
  property day: DaysOfWeek    [id 42, key day]
  property startHour: Integer [id 22, key starthour]
  property endHour: Integer   [id 89, key endhour]
----

[source,json]
----
include::property-variants.json[]
----

=== Containment variants
[source,json]
----
include::containment-variants.json[]
----

*node* with *id* `cff` is outside the processed document.

=== Reference variants
We support different kinds of targets.{fn-org57}
[source,json]
----
include::reference-variants.json[]
----

=== Annotation variants
For this example, we need to define some annotations and their annotated concepts.

NOTE: The format used in this example is non-normative.

Assume these annotations:
[source]
----
annotation Docu [id 23, key docuAnn]
  multiple = true
  annotates = IDocumentable
  property docu: String [id 34, key Docu-docu]

annotation ExtendedDocu extends Docu [id 20, key docuExtended]
  property moreDocu: String [id mds, key MDS]

annotation Marker [id 22, key myMarker]
  multiple = false
  annotates = Node

annotation TrashCan [id 99, key throwAway]
  multiple = false
  annotates = Node
  containment trash: 0..* Node  [id 2, key tat]

interface JavaInfo [id 33, key jv]
  property javaVersion: String  [id 33a, key jvA]

annotation MappedToClass implements JavaInfo [id mtc, key MTC]
  multiple = false
  annotates = Classifier
  reference javaClass: 1 BaseLanguageClass [id jjj, key JJJ]


annotation UsesMapping implements JavaInfo [id um, key UM]
  multiple = false
  annotates = Feature
  reference mapping: 1 MappedToClass [id jjj1, key JJJ1]
----

And these concepts:
[source]
----
interface IDocumentable [id 50, key 51]

concept BaseLanguageClass implements IDocumentable [id 60, key 61]

concept OtherLanguageConcept [id 70, key otherLangConc]
  reference usesTrashCan: 0..1 TrashCan [id 72, key usesTrashCan]
----


[source,json]
----
include::annotation-variants.json[]
----

[[versions]]
== Versions

NOTE: The term "version" is a bit ambiguous within LionWeb.{fn-org172}
This section lists all versions as they appear in <<SerializationChunk.serializationFormatVersion>> and <<{m3}.adoc#Language.version, `Language.version`>> for languages `LionWeb-M3` and `LionWeb-builtins`.

=== 2024.1
Technical name: `2024.1`

* Repurposed `JSON` primitive datatype serialization for <<{m3}.adoc#StructuredDataType, StructuredDataType>>

Refer to <<{roadmap}.adoc#release-2024.1, roadmap>> for details.

=== 2023.1
Technical name: `2023.1`

Initial version.
Refer to <<{roadmap}.adoc#release-2023.1, roadmap>> for details.

[[json-schema]]
== JSON Schema for serialization
[source,json]
----
include::serialization.schema.json[]
----

[[possible-values]]
== Possible values for `properties`, `containments`, and `references`
Only bold entries are valid.{fn-java33}

[%header,cols="1a,1,1,1"]
|===
|1 A +
Contents
|B +
``properties: {``_ _ _``}``
|C +
``containments: {``_ _ _``}``
|D  +
``references: {``_ _ _``}``

|2 `"a": "b"`
|*property with id `a` has value `b`*
.4+.^|`containments` value must be array
.4+.^|`references` value must be array

|3 `"c": ""`
|*property with id `c` has value (empty string)*

|4 `"d": " "`
|*property with id `d` has value ` `(one space)*

|5 `"e": null`
|*property with id `e` has no value*

|6 (key `f` not present)
|*property with id `f` has no value*
|*containment with id `f` does not contain any nodes*
|*reference with id `f` does not point to any nodes*

|7 `"g": []`
.9+.^|`properties` value must be string
|*containment with id `g` does not contain any nodes*
|*reference with id `g` does not point to any nodes*

|8 `"h": [ "i" ]`
|*containment with id `h` contains node with id`i`*
|`references` value array element must be object

|9

[source%nowrap]
----
"j": [
 {
   "resolveInfo": "k",
   "reference": "l"
 }
]
----
.2+.^|`containments` value array element must be string
|*reference with id `j` points to node with id `l`, re-binding supported by text `k`*

|10 `"m": [ null ]`
|`references` value array element must be an object

|11 `"n": true`
.5+.^|`containments` value must be array
.5+.^|`references` value must be array

|12 `"o": 12`

|13 `"p": 34.56`

|14 `"q": {}`

|15 `"r": {`...`}`

|16 `"s": foo`
3.2+^.^|JSON syntax error

|17 `"t": undefined`
|===
